--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@radix-ui/react-slot": "^1.1.0",
+		"axios": "^1.7.4",
+		"class-variance-authority": "^0.7.0",
 		"classnames": "^2.5.1",
 		"clsx": "^2.1.1",
+		"lucide-react": "^0.428.0",
 		"next": "14.2.5",
 		"react": "^18",
 		"react-dom": "^18",
-		"tailwind-merge": "^2.5.2"
+		"react-icons": "^5.3.0",
+		"shadcn-ui": "^0.2.3",
+		"tailwind-merge": "^2.5.2",
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
